--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         }
     ],
     "autoload": {
-        "psr-0": {
-            "As3\\Modlr\\RestOdm\\Api\\JsonApiOrg": "src/"
+        "psr-4": {
+            "As3\\Modlr\\RestOdm\\Api\\JsonApiOrg\\": "src/"
         }
     },
     "require": {
